Updating libraries importation

--- a/Skfolio_Portfolio_Optimization.ipynb
+++ b/Skfolio_Portfolio_Optimization.ipynb
@@ -53,7 +53,10 @@
    "source": [
     "from plotly.io import show \n",
     "from sklearn.model_selection import train_test_split\n",
-    "from skfolio import Population\n"
+    "from skfolio import Population\n",
+    "from skfolio.optimization import (EqualWeighted, MaximumDiversification, Random)\n",
+    "from skfolio.preprocessing import prices_to_returns\n",
+    "from openbb import obb"
    ]
   },
   {
